delete,edit users

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                         <th>Email</th>
                         <th>Phone</th>
                         <th>Role</th>
+                        <th>Books</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -129,6 +130,8 @@
         </div>
     </div>
     
+    <script src="./scripts/views-controller/User.js"></script>
+    <script src="./scripts/views-controller/Book.js"></script>
     <script src="./scripts/global.js"></script>
     <script src="./scripts/validations.js"></script>
     <script src="./scripts/Cookie.js"></script>
@@ -138,7 +141,6 @@
     <script src="./scripts/UI.js"></script>
     <script src="./scripts/authentication.js"></script>
     <script src="./scripts/main.js"></script>
-    <script src="./scripts/views-controller/User.js"></script>
     <script src="./scripts/views-controller/books_section.js"></script>
     <script src="./scripts/views-controller/users_section.js"></script>
     <!-- <div class="mt-4">
